tests/delete/attribute_table_no_name/test.stderr
error: A struct must be annotated with `#[crud_table("table_name")]` to specify the database table
 --> tests/delete/attribute_table_no_name/test.rs:4:1
  |
4 | / #[crud_table]
5 | | struct Test {
6 | |     #[crud_id]
7 | |     id: i64,
8 | |     name: String,
9 | | }
  | |_^

error[E0599]: no function or associated item named `delete` found for struct `Test` in the current scope
  --> tests/delete/attribute_table_no_name/test.rs:13:25
   |
5  | struct Test {
   | ----------- function or associated item `delete` not found for this struct
...
13 |     let _result = Test::delete(1).await;
   |                         ^^^^^^ function or associated item not found in `Test`
